--- a/src/styles.css
+++ b/src/styles.css
@@ -77,6 +77,7 @@
 html, body {
   height: 100%;
   margin: 0;
+  overflow-x: hidden;
 }
 
 body {
